<resources>
    <string name="app_name">CGF</string>


    <string name="logo">Logo</string>
    <string name="continuar">Continuar</string>
    <string name="criador_e_gerenciador_de_fichas_d_d_5e"><![CDATA[Criador e Gerenciador de Fichas D&D 5E]]></string>
    <string name="logocgf">LogoCGF</string>
    <string name="d_d_5e"><![CDATA[D&D 5E]]></string>
    <string name="fichas">Fichas</string>
    <string name="regras_da_casa">Regras da casa</string>
    <string name="nome">Nome:</string>
    <string name="ca">CA</string>
    <string name="proef">Prof.</string>
</resources>
