<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@drawable/background_silver">


    <ImageView
            android:layout_width="206dp"
            android:layout_height="93dp" app:srcCompat="@drawable/logo"
            android:id="@+id/logo" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logocgf"
            android:background="@drawable/background_rounded" android:scaleType="fitXY"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/background_orange"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/logo"
            android:id="@+id/constraintLayout" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

        <Button
                android:background="@mipmap/ic_x_round"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_excluir_ficha"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:background="@mipmap/ic_mais_round"
                android:layout_width="52dp"
                android:layout_height="wrap_content" android:id="@+id/button_add_ficha" android:elevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/button_excluir_ficha"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp" android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:id="@+id/text_ficha"
                android:text="@string/fichas"
                android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp"
                android:fontFamily="serif" android:textColor="@android:color/background_dark"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_personagens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@drawable/background_orange"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout2" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view_personagens" android:layout_marginTop="16dp">
        <TextView
                android:id="@+id/text_regras"
                android:text="@string/regras_da_casa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="serif"
                android:layout_marginStart="15dp"
                android:textColor="@android:color/background_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAlignment="viewStart"/>
        <Button
                android:background="@mipmap/ic_x_round"
                android:layout_width="52dp"
                android:layout_height="wrap_content" android:id="@+id/button_excluir_regras" android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:background="@mipmap/ic_mais_round"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_regra"
                android:elevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/button_excluir_regras"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_regras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>