<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:background="@drawable/background_papiro"
                                                   android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/linearLayoutInfo">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextOrange"
                    android:labelFor="@+id/editNome"
                    android:id="@+id/viewNome"/>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:id="@+id/editNome" android:text="nome"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:labelFor="@id/editProf"
                    android:text="@string/proef"
                    android:theme="@style/TextOrange"
                    android:id="@+id/viewProf" android:textAlignment="textEnd"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:theme="@style/TextRed"
                    android:layout_marginStart="5dp"
                    android:id="@+id/editProf"
                    android:text="+5"
            />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:theme="@style/TextOrange"
                    android:text="@string/ca"
                    android:textAlignment="textEnd"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:theme="@style/TextRed"
                    android:layout_marginStart="5dp"
                    android:id="@+id/editCa"
                    android:textAlignment="center"
                    android:text="20"
            />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutBotoesLaranja"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutInfo"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_red"
                android:id="@+id/button_iniciativa"
                android:paddingHorizontal="15dp"
                android:layout_marginStart="20dp"
                android:paddingVertical="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Inic."/>
            <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/cyan"
                    android:layout_height="wrap_content"
                    android:text="+0"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_red"
                android:id="@+id/button_pv"
                android:layout_marginStart="180dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="PV."/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:textColor="@color/cyan"
                    android:text="55"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutBotoesLaranja"
            android:id="@+id/linearLayoutAtributos1"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_sea">


            <TextView
                    android:text="For:"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:labelFor="@id/viewMod0"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewAtr0"/>

            <TextView
                    android:text="+0"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewMod0"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@drawable/background_sea">


            <TextView
                    android:text="Des:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:labelFor="@id/viewMod1"
                    android:id="@+id/viewAtr1"/>

            <TextView
                    android:text="+0"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:id="@+id/viewMod1"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:background="@drawable/background_sea">


            <TextView
                    android:text="Con:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:labelFor="@id/viewMod2"
                    android:id="@+id/viewAtr2"/>

            <TextView
                    android:text="+0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:id="@+id/viewMod2"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutAtributos1"
            android:id="@+id/linearLayoutAtributos2"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_sea">


            <TextView
                    android:text="Sab:"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:labelFor="@id/viewMod3"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewAtr3"/>

            <TextView
                    android:text="+0"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewMod3"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@drawable/background_sea">


            <TextView
                    android:text="Int:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:labelFor="@id/viewMod4"
                    android:id="@+id/viewAtr4"/>

            <TextView
                    android:text="+0"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:id="@+id/viewMod4"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:background="@drawable/background_sea">


            <TextView
                    android:text="Car:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:labelFor="@id/viewMod5"
                    android:id="@+id/viewAtr5"/>

            <TextView
                    android:text="+0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:id="@+id/viewMod5"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>